Feat: Implement an interactive Rust guide with Vue.js
- Create a Vue.js project framework with TypeScript
- Implement main pages:
- Introduction to the Rust language
- Installation guide with instructions for Linux/macOS/Windows
- Cargo tutorial as a package manager
- Add reusable components:
- ButtonSelection for navigation
- MenuMain for the main structure
- Configure syntax highlighting with highlight.js
- Implement responsive design with Tailwind CSS
- Add initial documentation in README.md

The application serves as an interactive guide for learning Rust, with an emphasis on installing and initially configuring the development environment.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RoadmapRust</title>
   </head>
-  <body class="bg-[#4A3B34]">
+  <body class="bg-[#1D1B1C]">
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
